# olcGameEngine

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  main.cpp  makeProj.sh  widgets.qss
include/: audioManager.h  clippingRoutines.h  essentialFunctions.h  geometricPrimitives.h  globalVariables.h  guiEssentials.h  inputManager.h  matrixMathEssentials.h  meshMathEssentials.h  miscFunctions.h  miscPrimitives.h  normalMathEssentials.h  platformFunctions.h  triangleMathEssentials.h  userAudio.h  vectorMathEssentials.h
include/OLCHeaders/: Modifications.txt  olcPGEX_QuickGUIModified.h  olcPGEX_SplashScreen.h  olcPGEX_TTF.h  olcPixelGameEngine.h
resources/config/: input.yaml
resources/fonts/: sources.txt
resources/textures/: sources.txt
src/: audioManager.cpp  clippingRoutines.cpp  essentialFunctions.cpp  geometricPrimitives.cpp  guiEssentials.cpp  inputManager.cpp  matrixMathEssentials.cpp  meshMathEssentials.cpp  miscFunctions.cpp  miscPrimitives.cpp  normalMathEssentials.cpp  platformFunctions.cpp  stbImageWriteImplementation.cpp  triangleMathEssentials.cpp  vectorMathEssentials.cpp
src/extra/: GUITest.cpp  OBJFileSerializer.cpp  Part1Final.cpp  Part2Final.cpp  Part3Final.cpp  Part4Final.cpp  test.cpp
src/extra/Examples/: Example.cpp  TEST_QuickGUI.cpp
